@@ -4,6 +4,8 @@ Changelog
 HEAD
 ~~~~
 
+- Prefix tags which do not belong to the default namespace. [malthe]
+
 1.0b10 (released 24/11/2008)
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
